--- a/index.html
+++ b/index.html
@@ -118,28 +118,30 @@
 
   <!-- Projects Preview -->
   <section class="section">
-    <h2>Featured Work</h2>
-    <div class="projects">
-      <article class="project">
-        <span class="kicker">Forensics / DFIR</span>
-        <h3>Forensic Analysis of an Intrusion</h3>
-        <p>Investigated persistence, unauthorized accounts, and SSH exfiltration. Tools: FTK Imager, Autopsy, Autoruns. Report aligned with NIST & ITGC.</p>
-        <p><a href="projects.html">View case study →</a></p>
-      </article>
-      <article class="project">
-        <span class="kicker">SOC / SIEM</span>
-        <h3>Splunk Detections & Dashboards</h3>
-        <p>Created queries for failed logins, privilege assignment (Event IDs 4624/4672), and process anomalies; built triage dashboard.</p>
-        <p><a href="#">Repo (coming soon) →</a></p>
-      </article>
-      <article class="project">
-        <span class="kicker">Recon / Scripting</span>
-        <h3>Network Recon Toolkit</h3>
-        <p>Automated Nmap + service enumeration and quick HTML report generation using Python.</p>
-        <p><a href="#">Repo (coming soon) →</a></p>
-      </article>
-    </div>
-  </section>
+  <h2>Featured Work</h2>
+  <div class="projects">
+    <article class="project">
+      <span class="kicker">Forensics / DFIR</span>
+      <h3>Forensic Analysis of an Intrusion</h3>
+      <p>Investigated persistence, unauthorized accounts, and SSH exfiltration. Tools: FTK Imager, Autopsy, Autoruns. Report aligned with NIST & ITGC.</p>
+      <p><a href="projects.html">View case study →</a></p>
+    </article>
+
+    <article class="project">
+      <span class="kicker">SOC / SIEM</span>
+      <h3>Splunk Detections & Dashboards</h3>
+      <p>Created queries for failed logins, privilege assignment (Event IDs 4624/4672), and process anomalies; built triage dashboard.</p>
+      <p><a href="https://github.com/Niknaz-65/splunk-detections-dashboards" target="_blank" rel="noopener">GitHub Repo →</a></p>
+    </article>
+
+    <article class="project">
+      <span class="kicker">Recon / Scripting</span>
+      <h3>Network Recon Toolkit</h3>
+      <p>Automated Nmap + service enumeration and quick HTML report generation using Python.</p>
+      <p><a href="https://github.com/Niknaz-65/network-recon-toolkit" target="_blank" rel="noopener">GitHub Repo →</a></p>
+    </article>
+  </div>
+</section>
 
   <!-- Certifications CTA -->
   <section class="section" id="certifications">
