--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
     <div class="card">
       <h2>Education</h2>
       <ul style="margin:0; padding-left:18px; color:#5b6876; line-height:1.6;">
-        <li><strong>M.S. Cybersecurity Technology</strong>, University of Maryland Global Campus — GPA 4.0, President’s List</li>
-        <li><strong>B.S. Information Technology</strong>, University of Phoenix — Magna Cum Laude</li>
+        <li><strong>M.S. Cybersecurity Technology</strong>, University of Maryland Global Campus (GPA 4.0, President’s List)</li>
+        <li><strong>B.S. Information Technology</strong>, University of Phoenix (Magna Cum Laude)</li>
       </ul>
     </div>
   </section>
