--- a/index.html
+++ b/index.html
@@ -116,32 +116,66 @@
     </div>
   </section>
 
-  <!-- Projects Preview -->
-  <section class="section">
+<!-- Projects Preview -->
+<section id="featured-work" class="section">
   <h2>Featured Work</h2>
   <div class="projects">
     <article class="project">
       <span class="kicker">Forensics / DFIR</span>
       <h3>Forensic Analysis of an Intrusion</h3>
-      <p>Investigated persistence, unauthorized accounts, and SSH exfiltration. Tools: FTK Imager, Autopsy, Autoruns. Report aligned with NIST & ITGC.</p>
-      <p><a href="projects.html">View case study →</a></p>
+      <p>Investigated persistence, unauthorized accounts, and SSH exfiltration. Tools: FTK Imager, Autopsy, Autoruns. Report aligned with NIST &amp; ITGC.</p>
+      <p>
+        <a href="projects.html" aria-label="View DFIR case study">
+          View case study &rarr;
+        </a>
+      </p>
     </article>
 
     <article class="project">
       <span class="kicker">SOC / SIEM</span>
-      <h3>Splunk Detections & Dashboards</h3>
-      <p>Created queries for failed logins, privilege assignment (Event IDs 4624/4672), and process anomalies; built triage dashboard.</p>
-      <p><a href="https://github.com/Niknaz-65/splunk-detections-dashboards" target="_blank" rel="noopener">GitHub Repo →</a></p>
+      <h3>Splunk Detections &amp; Dashboards</h3>
+      <p>Created queries for failed logins, privilege assignment (Event IDs 4624/4672), and process anomalies; built a triage dashboard.</p>
+      <p>
+        <a href="https://github.com/Niknaz-65/splunk-detections-dashboards"
+           target="_blank" rel="noopener noreferrer"
+           aria-label="Open Splunk Detections & Dashboards GitHub repository">
+          GitHub Repo &rarr;
+        </a>
+      </p>
     </article>
 
     <article class="project">
       <span class="kicker">Recon / Scripting</span>
       <h3>Network Recon Toolkit</h3>
-      <p>Automated Nmap + service enumeration and quick HTML report generation using Python.</p>
-      <p><a href="https://github.com/Niknaz-65/network-recon-toolkit" target="_blank" rel="noopener">GitHub Repo →</a></p>
+      <p>Automated Nmap service enumeration with quick HTML report generation using Python.</p>
+      <p>
+        <a href="https://github.com/Niknaz-65/network-recon-toolkit"
+           target="_blank" rel="noopener noreferrer"
+           aria-label="Open Network Recon Toolkit GitHub repository">
+          GitHub Repo &rarr;
+        </a>
+      </p>
     </article>
   </div>
 </section>
+
+</article>
+
+<article class="project">
+  <span class="kicker">Recon / Scripting</span>
+  <h3>Network Recon Toolkit</h3>
+  <p>Automated Nmap service enumeration with quick HTML report generation using Python.</p>
+  <p>
+    <a href="https://github.com/Niknaz-65/network-recon-toolkit"
+       target="_blank" rel="noopener noreferrer"
+       aria-label="Open Network Recon Toolkit GitHub repository">
+      GitHub Repo &rarr;
+    </a>
+  </p>
+</article>
+</div>
+</section>
+
 
   <!-- Certifications CTA -->
   <section class="section" id="certifications">
