--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
     .btn:hover { transform: translateY(-2px); filter: brightness(1.05); }
     .btn.outline { background:#fff; color: var(--navy-2); border:2px solid var(--navy-2); }
     .btn.pdf { background: var(--accent); }
+    .btn.linkedin {
+  background-color: #0077b5; /* LinkedIn blue */
+  color: #fff;
+}
+.btn.linkedin:hover {
+  background-color: #005f87;
+  transform: translateY(-2px);
+  filter: brightness(1.05);
+}
 
     /* Sections / Cards */
     .section { max-width:1100px; margin: 26px auto; padding: 0 20px; }
@@ -96,6 +105,7 @@
         <a class="btn pdf" href="Niknaz_Sadehvandi_Resume.pdf" download>📄 Download Resume</a>
         <a class="btn outline" href="projects.html">View Projects</a>
         <a class="btn outline" href="contact.html">Contact Me</a>
+          <a class="btn linkedin" href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank">🔗 LinkedIn Profile</a>
       </div>
     </div>
   </section>
