--- a/index.html
+++ b/index.html
@@ -105,7 +105,14 @@
         <a class="btn pdf" href="Niknaz_Sadehvandi_Resume.pdf" download>📄 Download Resume</a>
         <a class="btn outline" href="projects.html">View Projects</a>
         <a class="btn outline" href="contact.html">Contact Me</a>
-          <a class="btn linkedin" href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank">🔗 LinkedIn Profile</a>
+          <a class="btn linkedin" 
+   href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" 
+   target="_blank">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" 
+       alt="LinkedIn" 
+       style="width:18px; filter:invert(1); vertical-align:middle; margin-right:6px;">
+  LinkedIn Profile
+</a>
       </div>
     </div>
   </section>
