--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     .btn.linkedin {
   background-color: #0077b5; /* LinkedIn blue */
   color: #fff;
+  display: inline-flex;
+  align-items: center;
+  font-weight: 600;
 }
 .btn.linkedin:hover {
   background-color: #005f87;
