--- a/index.html
+++ b/index.html
@@ -104,22 +104,30 @@
       <h1>Cybersecurity Analyst</h1>
       <p class="tagline">DFIR • SOC Monitoring • Vulnerability Management • Compliance (NIST, SOX ITGC)</p>
       <p class="summary">I investigate intrusions, analyze logs, and harden systems. Skilled with Splunk, Linux, Python, and network tooling (Nmap, Wireshark). Currently completing my <strong>M.S. in Cybersecurity Technology (UMGC, 2025)</strong>.</p>
-      <div class="cta">
-  <a class="btn pdf" href="Niknaz_Sadehvandi_Resume.pdf" download>📄 Download Resume</a>
-  <a class="btn outline" href="projects.html">View Projects</a>
-  <a class="btn outline" href="contact.html">Contact Me</a>
-  <a class="btn linkedin" href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" 
-         alt="LinkedIn" 
-         style="width:18px; filter:invert(1); vertical-align:middle; margin-right:6px;">
-    LinkedIn Profile
-  </a>
-  <a class="btn github" href="https://github.com/Niknaz-65" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"
-         alt="GitHub"
-         style="width:18px; filter:invert(1); vertical-align:middle; margin-right:6px;">
-    GitHub Profile
-  </a>
+     <div class="cta">
+  <!-- Main buttons row -->
+  <div class="cta-main">
+    <a class="btn pdf" href="Niknaz_Sadehvandi_Resume.pdf" download>📄 Download Resume</a>
+    <a class="btn outline" href="projects.html">View Projects</a>
+    <a class="btn outline" href="contact.html">Contact Me</a>
+  </div>
+
+  <!-- Social buttons row -->
+  <div class="cta-social">
+    <a class="btn linkedin" href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" 
+           alt="LinkedIn" 
+           style="width:18px; filter:invert(1); vertical-align:middle; margin-right:6px;">
+      LinkedIn
+    </a>
+
+    <a class="btn github" href="https://github.com/Niknaz-65" target="_blank">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"
+           alt="GitHub"
+           style="width:18px; filter:invert(1); vertical-align:middle; margin-right:6px;">
+      GitHub
+    </a>
+  </div>
 </div>
   </section>
 
