--- a/projects.html
+++ b/projects.html
@@ -96,9 +96,10 @@
             <li>Automated common scan profiles (top-1000, -sV, -O)</li>
             <li>HTML report with host/service highlights</li>
           </ul>
-          <div class="btns">
-            <a class="btn" href="https://github.com/niknaz-65/recon-toolkit" target="_blank" rel="noopener">💻 GitHub Repo</a>
-          </div>
+         <div class="btns">
+  <a class="btn" href="https://github.com/niknaz-65/forensic-intrusion/raw/main/Forensic_Report.pdf" target="_blank" rel="noopener">📄 View Report (PDF)</a>
+  <a class="btn alt" href="https://github.com/niknaz-65/forensic-intrusion" target="_blank" rel="noopener">💻 GitHub Repo</a>
+</div>
         </div>
       </article>
     </section>
