--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
             <li>Correlated artifacts across registry, tasks, and SSH logs</li>
           </ul>
           <div class="btns">
-            <a class="btn" href="assets/forensic-intrusion-report.pdf" target="_blank" rel="noopener">📄 View Report (PDF)</a>
+            <a class="btn" href="assets/forensics-report.pdf" target="_blank" rel="noopener">📄 View Report (PDF)</a>
             <a class="btn alt" href="#">🔗 Evidence Pack / Repo (optional)</a>
           </div>
         </div>
