--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
           </ul>
           <div class="btns">
             <a class="btn" href="assets/forensics-report.pdf" target="_blank" rel="noopener">📄 View Report (PDF)</a>
-            <a class="btn alt" href="#">🔗 Evidence Pack / Repo (optional)</a>
+            <a class="btn alt" href="assets/forensics-report.pdf" target="_blank" rel="noopener">🔗 Evidence Pack / Repo</a>
           </div>
         </div>
       </article>
