--- a/index.html
+++ b/index.html
@@ -178,37 +178,26 @@
     <article class="project">
       <span class="kicker">Recon / Scripting</span>
       <h3>Network Recon Toolkit</h3>
-      <p>Automated Nmap service enumeration with quick HTML report generation using Python.</p>
-      <p>
-        <a href="https://github.com/Niknaz-65/network-recon-toolkit"
-           target="_blank" rel="noopener noreferrer"
-           aria-label="Open Network Recon Toolkit GitHub repository">
-          GitHub Repo &rarr;
+      <p>Automated Nmap service enumeration with quick HTML/CSV report generation using Python.</p>
+      <p style="display:flex; gap:10px; flex-wrap:wrap;">
+        <a class="btn outline" href="https://github.com/Niknaz-65/network-recon-toolkit"
+           target="_blank" rel="noopener noreferrer">
+          💻 GitHub Repo
+        </a>
+        <!-- Sample report (PNG). Swap to your HTML/PDF later if you upload one -->
+        <a class="btn pdf" href="https://raw.githubusercontent.com/Niknaz-65/network-recon-toolkit/main/report_screenshot.png"
+           target="_blank" rel="noopener noreferrer">
+          📄 View Report
         </a>
       </p>
     </article>
   </div>
 </section>
 
-</article>
-
-<article class="project">
-  <span class="kicker">Recon / Scripting</span>
-  <h3>Network Recon Toolkit</h3>
-  <p>Automated Nmap service enumeration with quick HTML report generation using Python.</p>
-  <p>
-    <a href="https://github.com/Niknaz-65/network-recon-toolkit"
-       target="_blank" rel="noopener noreferrer"
-       aria-label="Open Network Recon Toolkit GitHub repository">
-      GitHub Repo &rarr;
-    </a>
-  </p>
-</article>
 </div>
 </section>
 
-
-  <!-- Certifications CTA -->
+ <!-- Certifications CTA -->
   <section class="section" id="certifications">
     <div class="card">
       <h2>Certifications</h2>
