--- a/projects.html
+++ b/projects.html
@@ -95,9 +95,12 @@
             <li>Automated common scan profiles (top-1000, -sV, -O)</li>
             <li>HTML report with host/service highlights</li>
           </ul>
-         <div class="btns">
-  <a class="btn" href="https://github.com/niknaz-65/forensic-intrusion/raw/main/Forensic_Report.pdf" target="_blank" rel="noopener">📄 View Report (PDF)</a>
-  <a class="btn alt" href="https://github.com/niknaz-65/forensic-intrusion" target="_blank" rel="noopener">💻 GitHub Repo</a>
+        <div class="btns">
+  <!-- Use the sample report image for now; swap to your HTML/PDF when uploaded -->
+  <a class="btn" href="https://raw.githubusercontent.com/Niknaz-65/network-recon-toolkit/main/report_screenshot.png"
+     target="_blank" rel="noopener">📄 View Report</a>
+  <a class="btn alt" href="https://github.com/Niknaz-65/network-recon-toolkit"
+     target="_blank" rel="noopener">💻 GitHub Repo</a>
 </div>
         </div>
       </article>
