--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
       <h1>Cybersecurity Analyst</h1>
       <p class="tagline">DFIR • SOC Monitoring • Vulnerability Management • Compliance (NIST, SOX ITGC)</p>
       <p class="summary">I investigate intrusions, analyze logs, and harden systems. Skilled with Splunk, Linux, Python, and network tooling (Nmap, Wireshark). Currently completing my <strong>M.S. in Cybersecurity Technology (UMGC, 2025)</strong>.</p>
-     <div class="cta">
+    <p>
+  I’m a cybersecurity professional specializing in digital forensics, SIEM monitoring, and vulnerability assessment.
+  I enjoy investigating incidents, building automation scripts, and aligning findings with NIST and SOX frameworks.
+</p>
+      <div class="cta">
   <!-- Main buttons row -->
   <div class="cta-main">
     <a class="btn pdf" href="Niknaz_Sadehvandi_Resume.pdf" download>📄 Download Resume</a>
