--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Niknaz Sadehvandi | Cybersecurity Analyst</title>
-  <meta name="description" content="Cybersecurity portfolio for Niknaz Sadehvandi — DFIR, SOC, Vulnerability Management, and Compliance." />
+  <meta name="description" content="Cybersecurity professional specializing in digital forensics, SIEM monitoring, and vulnerability assessment. Experienced in incident investigation, automation scripting, and compliance alignment with NIST, SOX, and ITGC frameworks." />
   <meta property="og:title" content="Niknaz Sadehvandi | Cybersecurity Portfolio" />
   <meta property="og:description" content="DFIR • SOC • SIEM • Compliance" />
   <link rel="icon" href="assets/favicon.png" />
