--- a/projects.html
+++ b/projects.html
@@ -51,19 +51,54 @@
 
     <section class="grid">
       <!-- DFIR project -->
+            <!-- Digital Forensics Project 1 -->
       <article class="card">
-        <div class="thumb" role="img" aria-label="Forensics project cover"></div>
+        <div class="thumb" style="background-image:url('assets/digital-forensics-project1-cover.png');"></div>
         <div class="pad">
-          <div class="kicker">Forensics / DFIR • Jan–Mar 2025 (UMGC)</div>
-          <h3>Forensic Analysis of an Intrusion</h3>
-          <p>Investigated persistence mechanisms, unauthorized accounts, and SSH exfiltration. Tools included FTK Imager, Autopsy, and Autoruns. Findings aligned with NIST and ITGC practices.</p>
+          <div class="kicker">Forensics / DFIR</div>
+          <h3>Digital Forensics Project 1 – Network Intrusion</h3>
+          <p>Performed web server vulnerability scanning and Base64 decoding using Dirb, Nmap, and CyberChef in a controlled forensic lab (UMGC CST 640).</p>
           <ul class="meta">
-            <li>Parsed Windows Event IDs <strong>4624</strong> (logon) and <strong>4672</strong> (special privileges) for timeline</li>
-            <li>Correlated artifacts across registry, tasks, and SSH logs</li>
+            <li>Analyzed IIS logs and network traffic</li>
+            <li>Decoded exfiltrated credentials using CyberChef</li>
           </ul>
-        <div class="btns">
-  <a class="btn" href="assets/forensics-report.pdf" target="_blank" rel="noopener">📄 View Report (PDF)</a>
-</div>
+          <div class="btns">
+            <a class="btn" href="https://github.com/niknaz-65/digital-forensics-project1" target="_blank" rel="noopener">💻 GitHub Repo</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Digital Forensics Project 2 -->
+      <article class="card">
+        <div class="thumb" style="background-image:url('assets/digital-forensics-project2-cover.png');"></div>
+        <div class="pad">
+          <div class="kicker">Ethical Hacking / DFIR</div>
+          <h3>Digital Forensics Project 2 – The Hacker Attacks</h3>
+          <p>Simulated hacker persistence and data exfiltration through SSH backdoors, scheduled tasks, and startup scripts in a controlled environment (UMGC CST 640).</p>
+          <ul class="meta">
+            <li>Created scheduled backdoor tasks and startup batch scripts</li>
+            <li>Captured and analyzed malicious activity logs</li>
+          </ul>
+          <div class="btns">
+            <a class="btn" href="https://github.com/niknaz-65/digital-forensics-project2" target="_blank" rel="noopener">💻 GitHub Repo</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Digital Forensics Project 3 -->
+      <article class="card">
+        <div class="thumb" style="background-image:url('assets/digital-forensics-project3-cover.png');"></div>
+        <div class="pad">
+          <div class="kicker">Forensics / Incident Response</div>
+          <h3>Digital Forensics Project 3 – Forensic Analysis of an Intrusion</h3>
+          <p>Analyzed IIS logs, startup folder artifacts, and exfiltration evidence to reconstruct an intrusion timeline and recommend remediation actions (UMGC DFC 620).</p>
+          <ul class="meta">
+            <li>Investigated persistence mechanisms and system artifacts</li>
+            <li>Identified data exfiltration using registry and log analysis</li>
+          </ul>
+          <div class="btns">
+            <a class="btn" href="https://github.com/niknaz-65/digital-forensics-project3" target="_blank" rel="noopener">💻 GitHub Repo</a>
+          </div>
         </div>
       </article>
 
