--- a/projects.html
+++ b/projects.html
@@ -16,15 +16,32 @@
     .wrap{max-width:1100px;margin:24px auto;padding:0 20px}
     h1{color:var(--navy2);margin:6px 0 12px}
     .lead{color:var(--muted)}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:18px;margin-top:18px}
-    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;display:flex;flex-direction:column}
-    .thumb{height:180px;background:#0f274f url('assets/forensics-cover.png') center/cover no-repeat}
-    .pad{padding:18px}
+   .grid{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:24px;
+  margin-top:18px;
+}
+@media (max-width:1024px){ .grid{ grid-template-columns:repeat(2,1fr); } }
+@media (max-width:640px){ .grid{ grid-template-columns:1fr; } }
+    .card{
+  background:var(--card);
+  border-radius:var(--radius);
+  box-shadow:var(--shadow);
+  overflow:hidden;
+  display:flex;
+  flex-direction:column;
+  height:100%;
+  transition:transform .15s ease, box-shadow .15s ease;
+}
+.card:hover{ transform:translateY(-2px); box-shadow:0 14px 34px rgba(0,0,0,.12); }
+    .thumb{height:200px;background:#0f274f center/cover no-repeat}
+    .pad{padding:18px;display:flex;flex-direction:column;flex:1}
     .kicker{font-size:12px;color:#6b7787;text-transform:uppercase;letter-spacing:.4px}
-    .card h3{margin:6px 0 8px;color:var(--navy2)}
-    .card p{margin:0 0 10px;color:var(--muted)}
+    .card h3{margin:8px 0 6px;color:var(--navy2)}
+    .card p{margin:0 0 8px;color:var(--muted)}
     ul.meta{margin:6px 0 0 18px;color:#2d3e56}
-    .btns{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
+    .btns{display:flex;gap:10px;flex-wrap:wrap;margin-top:auto}
     .btn{display:inline-flex;align-items:center;gap:8px;background:var(--navy2);color:#fff;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:600}
     .btn.alt{background:#fff;color:var(--navy2);border:2px solid var(--navy2)}
     footer{margin-top:28px;background:var(--navy);color:#cfd9ea}.foot{max-width:1100px;margin:0 auto;padding:16px 20px;display:flex;align-items:center;justify-content:space-between}
@@ -145,7 +162,7 @@
   <footer>
     <div class="foot">
       <small>© 2025 Niknaz Sadehvandi • Cybersecurity Portfolio</small>
-      <a href="Niknaz_Sadehvandi_Resume.pdf" download style="color:#cfd9ea;">Download Resume</a>
+      <a href="Niknaz_Sadehvandi_Cybersecurity_Resume.pdf" download style="color:#cfd9ea;">Download Resume</a>
     </div>
   </footer>
 </body>
