--- a/certifications.html
+++ b/certifications.html
@@ -149,7 +149,7 @@
     <section class="list" aria-label="Completed certifications">
       <!-- IBM Python Basics -->
       <article class="cert">
-        <img class="logo" src="assets/logos/ibm.png" alt="IBM logo" />
+       <img class="logo" src="assets/ibm-logo.png" alt="IBM logo" />
         <div>
           <h3>Python Basics for Data Science</h3>
           <p class="meta">IBM • 2024</p>
@@ -162,7 +162,7 @@
 
       <!-- Stanford R Fundamentals -->
       <article class="cert">
-        <img class="logo" src="assets/logos/stanford.png" alt="Stanford Online logo" />
+       <img class="logo" src="assets/stanford-logo.png" alt="Stanford Online logo" />
         <div>
           <h3>R Programming Fundamentals</h3>
           <p class="meta">Stanford Online • 2024</p>
