Add 8-bit ALU and Simple CPU project details
Added details about the 8-bit ALU and Simple CPU project, including operations and features.

--- a/projects.html
+++ b/projects.html
@@ -156,6 +156,27 @@
 </div>
         </div>
       </article>
+            <!-- 8-bit ALU & CPU project -->
+      <article class="card">
+        <div class="thumb" style="background-image:url('alu_screenshot.png');"></div>
+        <div class="pad">
+          <div class="kicker">Computer Architecture / Logisim</div>
+          <h3>8-bit ALU & Simple CPU</h3>
+          <p>
+            Designed and implemented an 8-bit Arithmetic Logic Unit (ALU) and simple CPU in
+            Logisim-evolution (UMGC CMSC 306). The design includes 14 operations, status flags,
+            and a control unit that loads and executes instructions.
+          </p>
+          <ul class="meta">
+            <li>Implemented ADD, INC, DEC, CMP, NOT, AND, OR, SHR, SHL and extended ops</li>
+            <li>Built instruction select unit, REG_A / REG_B / REG_OUT registers, and control signals</li>
+          </ul>
+          <div class="btns">
+            <a class="btn" href="CPU_Project.pdf" target="_blank" rel="noopener">📄 Project Report (PDF)</a>
+            <a class="btn alt" href="ALU.circ" target="_blank" rel="noopener">⚙️ Download ALU.circ</a>
+          </div>
+        </div>
+      </article>
     </section>
   </main>
 
